# recommender

./: README.md  app.py  convert_time.py  main.py  pyproject.toml  run.py  test_short.py  text.txt  НА ВОТ НЕ КАЗАХСКИЙ ЭПОС.txt
bot/controller/: GreenAPI.py  GreenAPI_controll.py  WhatsAppBot.py
bot/db/: models.py
bot/settings/: config.py  logger.py
bot/stack/: prompts.py  traveler.py
bot/utils/: calculate.py  cleaner_context.py  create_link.py  whatsApp_utils.py
